--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,6 @@ body {
   font-size: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
 
 .container {
@@ -50,7 +49,8 @@ body {
 .tree {
   position: relative;
   width: 100vw;
-  height: 80vh;
+  height: 500px;
+  min-height: 550px;
 }
 
 div.img {
