--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 
 h1 {
   color: white;
-  font-size: 3em
+  font-size: 5em
 }
 
 /**
@@ -51,10 +51,10 @@ body {
 .tree {
   position: relative;
   margin: 0 auto;
+  margin-top: 100px;
   display: block;
   height: 60vh;
   min-height: 550px;
-  max-width: 500px;
 }
 
 div.img {
