--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,6 @@ div#star {
   margin: auto;
   width: 100%;
   font-size: 80px;
-  z-index: 5;
 }
 
 div.ball {
@@ -114,6 +113,7 @@ div.ball {
   align-items:center;
   justify-content:center;
   font-size: 2vh;
+  cursor: pointer;
 }
 
 div.ball-red {
@@ -266,4 +266,65 @@ div#ball23 {
 div#ball24 {
   top: 55%;
   left: 25%;
+}
+
+.day {
+   position: fixed;
+   height: 100%;
+   width: 100%;
+   top: 0;
+   right: 0;
+   bottom: 0;
+   left: 0;
+   background: rgba(0,0,0,0.8);
+   display: none;
+}
+
+.day h1 {
+  margin: 10px;
+  font-size: 2em;
+}
+
+.day, h2 {
+  margin-top: 10px;
+}
+
+#popup {
+   position: relative;
+   width: 80%;
+   height: 80%;
+   background-image: url("../img/popup_bg.jpg");
+   background-repeat: no-repeat;
+   background-size: 100%;
+   background-position: bottom;
+   margin: auto;
+   top: 10%;
+   font-size: 1.5em;
+   font-family: "Helvetica";
+}
+
+#popup .overlay {
+  position: absolute;
+  display: inline-block;
+  margin: 30px;
+  padding: 30px;
+  background: rgba(0,0,0,0.4);
+  color: white;
+}
+
+#popup .overlay a {
+  color: white;
+}
+
+#popup .overlay a:hover {
+  color: red;
+}
+
+
+#close {
+   position: absolute;
+   top: 20px;
+   right: 20px;
+   cursor: pointer;
+   color: #000;
 }
