changing background color

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ Snow
 
 body {
   width: 100%;
-  background-color: #F5624d;
+  background-color: #070B34;
   font-family: 'Cookie', cursive;
   font-size: 100%;
   margin: 0;
