--- a/css/styles.css
+++ b/css/styles.css
@@ -323,6 +323,18 @@ div#ball24 {
    overflow: scroll;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+#popup::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+#popup {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+
 #popup .overlay {
   position: absolute;
   display: inline-block;
